# Codexsubmcp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
codexsubmcp/: __init__.py  __main__.py  app_paths.py  cli.py
codexsubmcp/core/: __init__.py  analysis.py  cleanup.py  cleanup_workflow.py  codex_mcp_config.py  config.py  mcp_inventory.py  models.py  recognition.py  runtime_logs.py  stale_attached.py  system_snapshot.py  tool_signatures.py
codexsubmcp/gui/: __init__.py  app.py  main_window.py  task_runner.py  theme.py
codexsubmcp/platform/: __init__.py
docs/: release-process.md
docs/manual-validation/: 2026-03-25-codexsubmcp-gui-release-checklist.md  2026-03-28-cleanup-redesign-checklist.md
scripts/: publish-release.ps1
tests/: test_analysis.py  test_app_paths.py  test_attached_cleanup.py  test_cleanup_codex_mcp_orphans.py  test_cleanup_execution.py  test_cleanup_preview.py  test_cli.py  test_codex_mcp_config.py  test_core_cleanup.py  test_core_config.py  test_gui_smoke.py  test_install_codex_mcp_watchdog.py  test_mcp_inventory.py  test_packaging_metadata.py  test_release_publish_script.py  test_release_workflow.py  test_runtime_logs.py  test_system_snapshot.py  test_uninstall_codex_mcp_watchdog.py  test_windows_tasks.py
tools/: __init__.py  cleanup_codex_mcp_orphans.py  codex_mcp_watchdog.example.json  install_codex_mcp_watchdog.ps1  install_codex_mcp_watchdog.py  run_codex_mcp_watchdog.ps1  setup_codex_mcp_watchdog.ps1  setup_codex_mcp_watchdog.py  uninstall_codex_mcp_watchdog.ps1  uninstall_codex_mcp_watchdog.py
(+32 files in other folders)
