[project]
name = "codexsubmcp"
version = "0.1.0"
description = "Windows watchdog for leaked Codex subagent MCP process suites"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

